[gd_scene load_steps=6 format=3 uid="uid://cwpm5ngonvdf1"]

[ext_resource type="Script" uid="uid://dv1sts3ci0hxk" path="res://Scripts/dungeon_spawner.gd" id="1_dw2up"]
[ext_resource type="Texture2D" uid="uid://cxn327ciskiuc" path="res://Assets/PlayerModels/MainGame/JobBoard.png" id="2_a522y"]
[ext_resource type="Theme" uid="uid://csjc0hy4ae4h5" path="res://Themes/base_game_theme.tres" id="2_sggio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e64lc"]
size = Vector2(48, 48.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dw2up"]
size = Vector2(31.5, 29.5)

[node name="DungeonSpawner" type="Node2D"]
script = ExtResource("1_dw2up")

[node name="DungeonSpawnerStaticBody" type="StaticBody2D" parent="."]

[node name="DungeonSpawnerStaticCollisionShape" type="CollisionShape2D" parent="DungeonSpawnerStaticBody"]
position = Vector2(0, -0.5)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_e64lc")

[node name="DungeonSpawnerSprite" type="Sprite2D" parent="DungeonSpawnerStaticBody"]
scale = Vector2(3, 3)
texture = ExtResource("2_a522y")

[node name="InteracableArea" type="Area2D" parent="."]

[node name="InteractableCollisionShape" type="CollisionShape2D" parent="InteracableArea"]
position = Vector2(1, -4)
scale = Vector2(8, 8)
shape = SubResource("RectangleShape2D_dw2up")

[node name="DungeonSpawnerCreateDungeonCanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="DungeonSpawnerCreateDungeonCanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -327.0
offset_bottom = 1080.0
grow_horizontal = 0
theme = ExtResource("2_sggio")

[node name="VBoxContainer" type="VBoxContainer" parent="DungeonSpawnerCreateDungeonCanvasLayer/Panel"]
layout_mode = 0
offset_top = 1.0
offset_right = 326.0
offset_bottom = 1079.0

[node name="CreaterTitle" type="Label" parent="DungeonSpawnerCreateDungeonCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "Job Board"
horizontal_alignment = 1

[node name="Control" type="Control" parent="DungeonSpawnerCreateDungeonCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartDungeonButton" type="Button" parent="DungeonSpawnerCreateDungeonCanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Start Job"

[node name="DungeonSpawnerInteractPanelContainer" type="PanelContainer" parent="."]
offset_left = -120.0
offset_top = 122.0
offset_right = 127.0
offset_bottom = 172.0
theme = ExtResource("2_sggio")

[node name="InteractionBoxContainer" type="VBoxContainer" parent="DungeonSpawnerInteractPanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="DungeonSpawnerInteractPanelContainer/InteractionBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Job Board"
horizontal_alignment = 1

[node name="Control" type="Control" parent="DungeonSpawnerInteractPanelContainer/InteractionBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InteractionLabel" type="Label" parent="DungeonSpawnerInteractPanelContainer/InteractionBoxContainer"]
layout_mode = 2
text = "Press E to interact"
horizontal_alignment = 1

[connection signal="body_entered" from="InteracableArea" to="." method="player_entered_area"]
[connection signal="body_exited" from="InteracableArea" to="." method="player_exited_area"]
[connection signal="button_down" from="DungeonSpawnerCreateDungeonCanvasLayer/Panel/VBoxContainer/StartDungeonButton" to="." method="create_dungon_clicked"]
